--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "dependencies": {
     "gatsby": "^3.13.1",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-sharp": "^3.14.1",
+    "gatsby-source-drupal": "^4.14.1",
+    "gatsby-transformer-sharp": "^3.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
